tests/e2e/authz-server/http/query-params/policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/playground/refs/heads/main/schemas/json/v3/validatingpolicy-policies.kyverno.io-v1alpha1.json
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: policy
spec:
  evaluation:
    mode: HTTP
  validations:
  - expression: >
      "bar" in object.attributes.QueryParam("foo")
        ?  http.Allowed().Response()
        :  http.Denied("not allowed").Response()
